Bug 1456728 - Bind an empty binding on scrollbar r=mconley
For some reason, removing the scrollbar binding triggers
content process performance regression on Linux.

We'll add an empty binding for now until we find the real cause.

MozReview-Commit-ID: 5sonOULH1x8

--- a/toolkit/themes/osx/global/nativescrollbars.css
+++ b/toolkit/themes/osx/global/nativescrollbars.css
@@ -7,6 +7,7 @@
 
 scrollbar {
   -moz-appearance: scrollbar;
+  -moz-binding: url("chrome://global/content/bindings/general.xml#empty");
   cursor: default;
   background-color: white;
 }
@@ -81,6 +82,7 @@ scrollcorner {
 @media print {
   html|div scrollbar {
     -moz-appearance: scrollbar;
+    -moz-binding: url("chrome://global/content/bindings/general.xml#empty");
     cursor: default;
   }
 }
